--- a/BASKET/index.css
+++ b/BASKET/index.css
@@ -1,107 +1,117 @@
-body{
+body {
   font-family: "Helvetica";
-  background-color: #
 }
-.main {
-    padding-top: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 0px 35px;
 
+#author {
+  align-self: flex-start;
+  width: 100%;
+}
+
+.main {
+  padding-top: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0px 35px;
 }
 
 .goods {
-    padding: 10px 30px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border: 1px dashed #bbbbbb;
-    flex-wrap: wrap;
-    background-color: #e7e8e6;
-
+  padding: 10px 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px dashed #bbbbbb;
+  flex-wrap: wrap;
+  background-color: #f2fcf2;
 }
-.goods__title{
+
+.goods__title {
   width: 50%;
   text-align: center;
   font-weight: 600;
 }
 
-.basket__title{
+.basket__title {
   width: 100%;
   text-align: center;
   font-weight: 600;
 }
-.budget{
+
+.budget {
   font-size: 16px;
   font-weight: 600;
 }
-.page__budget{
+
+.page__budget {
   width: 50%;
   text-align: center;
 }
+
 .good {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    margin: 15px;
-    min-width: 150px;
-    font-size: 12px;
-
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin: 15px;
+  min-width: 150px;
+  font-size: 12px;
 }
-
 }
 
 .good:not(:last-of-type) {
-    margin-bottom: .5rem;
+  margin-bottom: .5rem;
 }
 
 .good__count {
   order: -2;
-
 }
 
 .good__title {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .basket__info {
-    text-align: center;
-    padding-top: 30px;
-
+  text-align: center;
+  padding-top: 30px;
+  font-size: 13px;
 }
-.basket__goods-container{
+
+.basket__goods-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0 30px;
-
 }
+
 .basket__goods-container .good {
-  width: 50%;
+  width: 28%;
   padding: 0;
   margin: 0;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px 10px 30px;
-
+  background-color: white;
+  height: 85px;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
-.basket__goods-container .good .icon{
+
+.basket__goods-container .good .icon {
   width: 70px;
   margin: 0;
   order: -1;
 }
-.line{
+
+.line {
   width: 100%;
   height: 1px;
   background-color: #bbbb;
   margin: 0;
-
 }
+
 .basket {
   min-height: 300px;
   width: 100%;
@@ -115,40 +125,34 @@ body{
   background-color: #dcf1fa
 }
 
-.basket__progress {
-
-}
+.basket__progress {}
 
 .progress-vertical {
-      align-items: flex-end;
-
-
-  }
+  align-items: flex-end;
+}
 
 .progress-vertical .progress-bar {
-    height: 5px;
-    line-height: 34px;
+  height: 5px;
+  line-height: 34px;
 }
 
 .progress-bar {
-    transition: all 0.3s linear;
-}
-
-/* Misc */
-.center-text {
-    text-align: center;
+  transition: all 0.3s linear;
 }
 
 .center-block {
-    margin: 0 auto;
+  margin: 0 auto;
 }
-.icon{
+
+.icon {
   width: 100px;
   margin: auto;
 }
-.hidden{
+
+.hidden {
   display: none;
 }
-.basket__progress-bar{
+
+.basket__progress-bar {
   background-color: #90ee90;
 }
