--- a/BASKET/index.css
+++ b/BASKET/index.css
@@ -125,7 +125,11 @@ body {
   background-color: #dcf1fa
 }
 
-.basket__progress {}
+.basket__progress-title {
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-top: 30px;
+}
 
 .progress-vertical {
   align-items: flex-end;
